Add quantity to lineitems

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,8 +11,7 @@
     <td class="list_description">
       <dl>
         <dt><%= product.title %></dt>
-        <dd><%= truncate(strip_tags(product.description),
-               length: 80) %></dd>
+        <dd><%= product.description %></dd>
       </dl>
     </td>
 
