--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -5,6 +5,6 @@
 <h2>Shopping Cart</h2>
 <ul>    
   <% @cart.line_items.each do |item| %>
-    <li><%= item.product.title %></li>
+    <li><%= item.product.title %> x <%= item.quantity %></li>
   <% end %>
 </ul>
