--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,13 @@
 </head>
 <body class="<%= controller.controller_name %>">
   <div id="banner">
-    <%= @page_title || "Albert's Bathroom Store" %>
+    <%= "Albert's Bathroom Store" %>
   </div>
   <div id="columns">
     <div id="side">
+    <div id="cart">
+        <%= render @cart %>
+    </div>
     </div>
     <div id="main">
 
