--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -1,5 +1,5 @@
-
-<h2>Your Cart</h2>
+<% unless cart.line_items.empty? %>
+<h2>Shopping Cart</h2>
 <table>
   <%= render(cart.line_items) %>
   <tr class="total_line">
@@ -11,3 +11,4 @@
 
 
 <%= button_to 'Empty cart', cart, method: :delete %>
+<% end %>
