--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,16 @@
   </div>
   <div id="columns">
     <div id="side">
-    <div id="cart">
-        <%= render @cart %>
+      <div id="cart">
+      <% if @cart %>
+        <%= hidden_div_if(@cart.line_items.empty?, id: 'cart') do %>
+          <%= render @cart %>
+        <% end %> 
+      <% end %>
+      </div>
     </div>
-    </div>
+      <p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
     <div id="main">
 
       <%= yield %>
