Add stripe api and fix styling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,7 +19,7 @@
   padding: 10px;
   border-bottom: 2px solid;
   font: bold 40px/40px sans-serif;
-  color: blue;
+  color: #00008B;
   text-align: center;
 
   img {
