--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,20 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Albert's Bathroom Store</title>
+  <title>Albert's General Store</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body class="<%= controller.controller_name %>">
   <div id="banner">
-    <%= "Albert's Bathroom Store" %>
+    <%= "Albert's General Store" %>
   </div>
   <div id="columns">
     <div id="side">
       <div id="cart">
       <% if user_signed_in? %>
           <%= render @cart %>
+      <% else %>
+          <%= link_to 'Log In', new_user_session_path %>
+          <br>
+          <br>
+          <%= link_to 'Sign Up', new_user_registration_path %>
+
       <% end %>
       </div>
     </div>
